fixed header alignments.

--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -9,7 +9,7 @@
 .nav-menu-bar-custom {
     float: right;
     width: 600px;
-    padding-top: 20px;
+    padding-top: 18px;
 }
 
 .navbar {
